--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -21,12 +21,13 @@
         margin-bottom: 2rem;
         width: 100%;
 
-        // margin: 2rem 1rem;
-        
     }
     
     &__social-link {
+        display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-content: center;
         width: 65px;
         height: 35px;
         color: white;
